# arcvote

./: .gitignore  README.md
private-dao-vote/: Anchor.toml  Arcium.toml  README.md  package.json  tsconfig.json
private-dao-vote-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
private-dao-vote-ui/server/: index.js
private-dao-vote-ui/src/: App.jsx  constants.js  index.css  main.jsx  polyfills.js
private-dao-vote-ui/src/components/: CreateProposalModal.jsx  Header.jsx  ProposalCard.jsx  ProposalList.jsx  ResultDisplay.jsx  StatusBadge.jsx  TallyPanel.jsx  VoteModal.jsx  WalletProvider.jsx
private-dao-vote-ui/src/components/icons/: BrandMarkIcon.jsx  LockIcon.jsx  ProposalIcon.jsx  ShieldIcon.jsx  TallyIcon.jsx  VoteIcon.jsx
private-dao-vote-ui/src/idl/: private_voting.json
private-dao-vote-ui/src/lib/: arcium.js  encryption.js  solana.js
private-dao-vote-ui/src/shims/: crypto.js  fs.js
private-dao-vote/encrypted-ixs/: Cargo.toml
private-dao-vote/encrypted-ixs/src/: lib.rs
private-dao-vote/programs/private_voting/: Cargo.toml
private-dao-vote/programs/private_voting/src/: lib.rs
private-dao-vote/scripts/: init-comp-def.ts
private-dao-vote/tests/: private_voting.ts
